--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
